--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@capacitor/keyboard": "4.1.1",
     "@capacitor/status-bar": "4.1.1",
     "@ionic/angular": "^6.1.9",
+    "@ionic/storage-angular": "^3.0.6",
     "apexcharts": "^3.37.1",
     "ionicons": "^6.0.3",
     "ng-apexcharts": "^1.7.4",
